templates/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway-example
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
     number: 443
     name: https-hello-go
     protocol: HTTPS
    tls:
     mode: SIMPLE
     serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
     privateKey: /etc/istio/ingressgateway-certs/tls.key
    hosts:
    - "*"
  - port:
      number: 80
      name: http-hello-go
      protocol: HTTP
    hosts:
    - "hello-go.com"
